@@ -1,3 +1,8 @@
+2009-11-04  Jason Merrill  <jason@redhat.com>
+
+	PR c++/36912
+	* g++.dg/init/static-init2.C: New.
+
 2009-11-05  Uros Bizjak  <ubizjak@gmail.com>
 
 	PR target/41900
